2008-11-05  Karl Berry  <karl@gnu.org>

	* fdl.texi: update to 1.3.

2008-09-24  Karl Berry  <karl@gnu.org>

	* hello.texi: be more systematic about Hello vs. @samp{hello}.

2007-07-14  Karl Berry  <karl@gnu.org>

	* fdl.texi: new version without sectioning commands.
	* hello.texi: update accordingly.

2007-07-09  Karl Berry  <karl@gnu.org>

	* hello.texi (@copying): rms says that only the GNU manuals
	published on paper by the FSF need the standard Cover Texts.

2006-11-23  Karl Berry  <karl@gnu.org>

	* hello.texi (Introduction): capitalize Gnulib, for consistency.

2006-11-08  Karl Berry  <karl@gnu.org>

	* hello.texi (Sample output): remove wrong --help example.
	Change node names to "Initial cap only" style.

2006-07-15  Karl Berry  <karl@gnu.org>

	* hello.texi: thoroughly update the entire manual.

2006-05-03  Karl Berry  <karl@gnu.org>

	* hello.texi: bring somewhat up to date.

2005-03-21  Karl Berry  <karl@gnu.org>

	* doc/hello.texi: switch to GFDL; make Texinfo source follow
	current practices.

2002-05-25  Karl Eichwalder  <ke@gnu.franken.de>

	* gpl.texi: Use the contents auf emacs.texi (Emacs CVS).

2002-05-22  Karl Eichwalder  <ke@suse.de>

	* texinfo.tex: Update to version 2002-03-26.08 (from texinfo
	4.2).
	* hello.texi: Use the @copying directive to get the copyright
	notice output properly into all output formats.
	Reported by Paul Eggert.

	* hello.texi: Run s/prep.ai.mit.edu/gnu.org/ .
	Reported by Paul Eggert.

	* hello.texi: Add 2002 to the copyright statement.

1999-08-21  Karl Eichwalder  <ke@gnu.franken.de>

	* Makefile.am: Move old contributed manpage to ../contrib.
	(EXTRA_DIST): Remove target.
	(man_MANS): Ditto.

1999-01-31  Karl Eichwalder  <ke@suse.de>

	* hello.texi: Replace --help output; use the @email macro.

	* texinfo.tex: Renewed from automake-1.4.

1998-04-04  Karl Eichwalder  <ke@suse.de>

	* hello.1: Warn about probably out of date documentation in the
	manpage.

1998-02-28  Karl Eichwalder  <ke@suse.de>
