@@ -1,4 +1,4 @@
-@set UPDATED 24 September 2008
-@set UPDATED-MONTH September 2008
+@set UPDATED 28 November 2008
+@set UPDATED-MONTH November 2008
 @set EDITION 2.3.91
 @set VERSION 2.3.91
